--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,22 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.fullPageScroll {
+  width: 100%;
+  height: 100vh;
+  scroll-snap-type: y mandatory;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+.section {
+  width: 100%;
+  height: 100vh;
+  /* padding: 10%; */
+  scroll-snap-align: start;
+}
+
+.pagination a.active {
+  transform: scale(1.8);
+}
